src/rules/pyflakes/snapshots/ruff__pyflakes__tests__F634_F634.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    IfTuple: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 8
  fix: ~
  parent: ~
- kind:
    IfTuple: ~
  location:
    row: 7
    column: 4
  end_location:
    row: 8
    column: 12
  fix: ~
  parent: ~

