src/rules/pyflakes/snapshots/ruff__pyflakes__tests__F706_F706.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    ReturnOutsideFunction: ~
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 12
  fix: ~
  parent: ~
- kind:
    ReturnOutsideFunction: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 8
  fix: ~
  parent: ~

