src/rules/pyflakes/snapshots/ruff__pyflakes__tests__F821_F821_0.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UndefinedName: self
  location:
    row: 2
    column: 11
  end_location:
    row: 2
    column: 15
  fix: ~
  parent: ~
- kind:
    UndefinedName: self
  location:
    row: 6
    column: 12
  end_location:
    row: 6
    column: 16
  fix: ~
  parent: ~
- kind:
    UndefinedName: self
  location:
    row: 10
    column: 8
  end_location:
    row: 10
    column: 12
  fix: ~
  parent: ~
- kind:
    UndefinedName: numeric_string
  location:
    row: 21
    column: 11
  end_location:
    row: 21
    column: 25
  fix: ~
  parent: ~
- kind:
    UndefinedName: Bar
  location:
    row: 58
    column: 3
  end_location:
    row: 58
    column: 8
  fix: ~
  parent: ~
- kind:
    UndefinedName: TOMATO
  location:
    row: 83
    column: 10
  end_location:
    row: 83
    column: 16
  fix: ~
  parent: ~
- kind:
    UndefinedName: B
  location:
    row: 87
    column: 7
  end_location:
    row: 87
    column: 8
  fix: ~
  parent: ~
- kind:
    UndefinedName: B
  location:
    row: 90
    column: 7
  end_location:
    row: 90
    column: 8
  fix: ~
  parent: ~
- kind:
    UndefinedName: B
  location:
    row: 92
    column: 10
  end_location:
    row: 92
    column: 11
  fix: ~
  parent: ~
- kind:
    UndefinedName: B
  location:
    row: 93
    column: 13
  end_location:
    row: 93
    column: 14
  fix: ~
  parent: ~
- kind:
    UndefinedName: PEP593Test123
  location:
    row: 115
    column: 8
  end_location:
    row: 115
    column: 23
  fix: ~
  parent: ~
- kind:
    UndefinedName: foo
  location:
    row: 123
    column: 13
  end_location:
    row: 123
    column: 18
  fix: ~
  parent: ~
- kind:
    UndefinedName: bar
  location:
    row: 123
    column: 20
  end_location:
    row: 123
    column: 25
  fix: ~
  parent: ~

