src/rules/pyflakes/snapshots/ruff__pyflakes__tests__F821_F821_5.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UndefinedName: InnerClass
  location:
    row: 5
    column: 29
  end_location:
    row: 5
    column: 41
  fix: ~
  parent: ~

